--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,11 @@ dependencies {
     compile 'com.jakewharton.rxbinding:rxbinding:0.3.0'
     //compile 'com.jakewharton.rxbinding:rxbinding-design:0.3.0'
     compile 'com.jakewharton.rxbinding:rxbinding-support-v4:0.3.0'
+
+    compile 'com.jcodecraeer:xrecyclerview:1.2.6'
+
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
-    compile project(':PullToRefresh_library')
+
+
 }
