--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     compile 'com.jakewharton.rxbinding:rxbinding-support-v4:0.3.0'
 
     compile 'com.jcodecraeer:xrecyclerview:1.2.6'
+    compile 'de.greenrobot:greendao:2.0.0'
 
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
