--- a/.gitignore
+++ b/.gitignore
@@ -11,16 +11,7 @@ build/
 
 # IDEA
 *.iml
-.idea/.name
-.idea/encodings.xml
-.idea/inspectionProfiles/Project_Default.xml
-.idea/inspectionProfiles/profiles_settings.xml
-.idea/misc.xml
-.idea/modules.xml
-.idea/scopes/scope_settings.xml
-.idea/vcs.xml
-.idea/workspace.xml
-.idea/libraries
+.idea/
 
 
 # Built application files
